Trying to fix the overflow issue
I hope this is getting closer to what I wanted originally

--- a/src/Master.css
+++ b/src/Master.css
@@ -1,4 +1,25 @@
 /* Sam Paugel new content 2024© */
+
+html{
+  overflow: auto;
+}
+
+/* Index.tsx styles */
+body { 
+  overflow: auto;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+
 /* iOS places the subtitle above the title */
 ion-card-header.ios {
   display: flex;
@@ -12,15 +33,11 @@ ion-card-header.ios {
 .spacing {
   margin-top: 3em;
 }
-body {
-  overflow-y: auto;
-  position: relative;
-}
 
 
 /* Images */
 .starWarsImg {
-  max-width: 70em;
+  max-width: 100%;
 }
 .logoImg {
   max-width: 3em;
@@ -33,7 +50,6 @@ body {
 /* Basic Link styles */
 a:link {
   text-decoration: none;
-  /* color: #474646; */
 }
 a:visited {
   color: #9f9e9e;
@@ -111,7 +127,7 @@ ion-button {
  * Dark Colors
  * ------------------
  */
-body.dark {
+/* body.dark {
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66, 140, 255;
   --ion-color-primary-contrast: #ffffff;
@@ -179,6 +195,7 @@ body.dark {
  * iOS Dark Theme
  * -------------------
  */
+ /*
 .ios body.dark {
   --ion-background-color: #000000;
   --ion-background-color-rgb: 0, 0, 0;
@@ -210,12 +227,12 @@ body.dark {
 
   --ion-item-background: #1c1c1c;
   --ion-item-background-activated: #313131;
-}
+} */
 /*
  * Material Design Dark Theme
  * ------------------------------
  */
-.md body.dark {
+/* .md body.dark {
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18, 18, 18;
 
@@ -245,7 +262,7 @@ body.dark {
   --ion-color-step-950: #f3f3f3;
 
   --ion-item-background: #1a1b1e;
-}
+} */
 /* Optional CSS, this is added for the flashing that happens when toggling between themes */
 ion-item {
   --transition: none;
